[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rkstreamer"
authors = [
    {name = "Ray A.", email = "ray@raysecure.ml"},
]
description = "RK's CLI Music Player"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28.2",
    "python-vlc>=3.0.18121"
]
dynamic = ["version", "readme"]

[project.scripts]
rkstreamer = "rkstreamer.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "rkstreamer.__version__"}
readme = {file = "README.md"}